--- a/package.json
+++ b/package.json
@@ -1,22 +1,32 @@
 {
   "name": "heos-client",
   "version": "0.0.0",
-  "description": "",
-  "keywords": [],
+  "description": "A heos client",
+  "keywords": [
+    "heos",
+    "denon-heos",
+    "heos-wrapper",
+    "heos-api",
+    "smart speakers"
+  ],
   "main": "dist/heos-client.umd.js",
   "module": "dist/heos-client.es5.js",
   "typings": "dist/types/heos-client.d.ts",
   "files": [
     "dist"
   ],
-  "author": "jcelik <julius.cc@hotmail.com>",
+  "author": "Julius Recep Colliander Celik <julius.cc@hotmail.com>",
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/juliuscc/heos-client"
   },
+  "bugs": {
+    "url": "https://github.com/juliuscc/heos-client/issues"
+  },
+  "homepage": "https://github.com/juliuscc/heos-client#readme",
   "license": "MIT",
   "engines": {
-    "node": ">=6.0.0"
+    "node": ">=10.0.0"
   },
   "scripts": {
     "lint": "tslint  --project tsconfig.json -t codeFrame 'src/**/*.ts' 'test/**/*.ts'",
